syntax = "proto3";

package lcm.service.v1;

import "buf/validate/validate.proto";
import "google/api/annotations.proto";
import "google/api/field_behavior.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

// TenantSecret status
enum TenantSecretStatus {
  TENANT_SECRET_STATUS_UNSPECIFIED = 0;
  TENANT_SECRET_STATUS_ACTIVE = 1;
  TENANT_SECRET_STATUS_DISABLED = 2;
}

// TenantSecret entity - maps shared secrets to tenants
message TenantSecret {
  optional uint32 id = 1 [json_name = "id"];
  optional uint32 tenant_id = 2 [json_name = "tenantId"];
  optional string description = 3 [json_name = "description"];
  optional TenantSecretStatus status = 4 [json_name = "status"];
  optional google.protobuf.Timestamp expires_at = 5 [json_name = "expiresAt"];
  optional uint32 created_by = 100 [json_name = "createdBy"];
  optional uint32 updated_by = 101 [json_name = "updatedBy"];
  optional google.protobuf.Timestamp create_time = 200 [json_name = "createTime"];
  optional google.protobuf.Timestamp update_time = 201 [json_name = "updateTime"];
}

// Create a new tenant secret
message CreateTenantSecretRequest {
  uint32 tenant_id = 1 [
    json_name = "tenantId",
    (google.api.field_behavior) = REQUIRED
  ];
  string secret = 2 [
    json_name = "secret",
    (google.api.field_behavior) = REQUIRED,
    (buf.validate.field).string = {
      min_len: 16
      max_len: 256
    }
  ];
  optional string description = 3 [
    json_name = "description",
    (buf.validate.field).string = {max_len: 512}
  ];
  optional google.protobuf.Timestamp expires_at = 4 [json_name = "expiresAt"];
}

message CreateTenantSecretResponse {
  TenantSecret tenant_secret = 1 [json_name = "tenantSecret"];
}

// List tenant secrets
message ListTenantSecretsRequest {
  optional uint32 tenant_id = 1 [json_name = "tenantId"];
  optional TenantSecretStatus status = 2 [json_name = "status"];
  optional uint32 page = 10 [json_name = "page"];
  optional uint32 page_size = 11 [json_name = "pageSize"];
}

message ListTenantSecretsResponse {
  repeated TenantSecret items = 1 [json_name = "items"];
  uint64 total = 2 [json_name = "total"];
}

// Get a tenant secret
message GetTenantSecretRequest {
  uint32 id = 1 [
    json_name = "id",
    (google.api.field_behavior) = REQUIRED
  ];
}

message GetTenantSecretResponse {
  TenantSecret tenant_secret = 1 [json_name = "tenantSecret"];
}

// Update a tenant secret (description, status, expiry only - secret cannot be updated)
message UpdateTenantSecretRequest {
  uint32 id = 1 [
    json_name = "id",
    (google.api.field_behavior) = REQUIRED
  ];
  optional string description = 2 [
    json_name = "description",
    (buf.validate.field).string = {max_len: 512}
  ];
  optional TenantSecretStatus status = 3 [json_name = "status"];
  optional google.protobuf.Timestamp expires_at = 4 [json_name = "expiresAt"];
}

message UpdateTenantSecretResponse {
  TenantSecret tenant_secret = 1 [json_name = "tenantSecret"];
}

// Delete a tenant secret
message DeleteTenantSecretRequest {
  uint32 id = 1 [
    json_name = "id",
    (google.api.field_behavior) = REQUIRED
  ];
}

// Rotate a tenant secret (create new secret, optionally disable old)
message RotateTenantSecretRequest {
  uint32 id = 1 [
    json_name = "id",
    (google.api.field_behavior) = REQUIRED
  ];
  string new_secret = 2 [
    json_name = "newSecret",
    (google.api.field_behavior) = REQUIRED,
    (buf.validate.field).string = {
      min_len: 16
      max_len: 256
    }
  ];
  optional bool disable_old = 3 [json_name = "disableOld"];
}

message RotateTenantSecretResponse {
  TenantSecret new_secret = 1 [json_name = "newSecret"];
  optional TenantSecret old_secret = 2 [json_name = "oldSecret"];
}

// TenantSecret Admin Service
service TenantSecretService {
  // Create a new tenant secret
  rpc CreateTenantSecret(CreateTenantSecretRequest) returns (CreateTenantSecretResponse) {
    option (google.api.http) = {
      post: "/v1/tenant-secrets"
      body: "*"
    };
  }
  // List tenant secrets
  rpc ListTenantSecrets(ListTenantSecretsRequest) returns (ListTenantSecretsResponse) {
    option (google.api.http) = {
      get: "/v1/tenant-secrets"
    };
  }
  // Get a tenant secret by ID
  rpc GetTenantSecret(GetTenantSecretRequest) returns (GetTenantSecretResponse) {
    option (google.api.http) = {
      get: "/v1/tenant-secrets/{id}"
    };
  }
  // Update a tenant secret
  rpc UpdateTenantSecret(UpdateTenantSecretRequest) returns (UpdateTenantSecretResponse) {
    option (google.api.http) = {
      put: "/v1/tenant-secrets/{id}"
      body: "*"
    };
  }
  // Delete a tenant secret
  rpc DeleteTenantSecret(DeleteTenantSecretRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1/tenant-secrets/{id}"
    };
  }
  // Rotate a tenant secret
  rpc RotateTenantSecret(RotateTenantSecretRequest) returns (RotateTenantSecretResponse) {
    option (google.api.http) = {
      post: "/v1/tenant-secrets/{id}/rotate"
      body: "*"
    };
  }
}
