syntax = "proto3";

package ipam.service.v1;

import "buf/validate/validate.proto";
import "google/api/annotations.proto";
import "google/api/field_behavior.proto";
import "google/protobuf/timestamp.proto";

// HealthCheckRequest for health checks
message HealthCheckRequest {}

message HealthCheckResponse {
  string status = 1 [json_name = "status"];
  string version = 2 [json_name = "version"];
  google.protobuf.Timestamp timestamp = 3 [json_name = "timestamp"];
}

// GetStatsRequest retrieves overall IPAM statistics
message GetStatsRequest {
  optional uint32 tenant_id = 1 [json_name = "tenantId"];
}

message GetStatsResponse {
  int64 total_subnets = 1 [json_name = "totalSubnets"];
  int64 total_addresses = 2 [json_name = "totalAddresses"];
  int64 used_addresses = 3 [json_name = "usedAddresses"];
  int64 available_addresses = 4 [json_name = "availableAddresses"];
  int64 total_vlans = 5 [json_name = "totalVlans"];
  int64 total_devices = 6 [json_name = "totalDevices"];
  int64 total_locations = 7 [json_name = "totalLocations"];
  double overall_utilization = 8 [json_name = "overallUtilization"];
}

// DnsConfig holds DNS server configuration for reverse DNS lookups
message DnsConfig {
  // Unique identifier
  optional string id = 1 [json_name = "id"];

  // Tenant ID
  optional uint32 tenant_id = 2 [json_name = "tenantId"];

  // List of DNS server addresses (e.g., "8.8.8.8", "1.1.1.1")
  repeated string dns_servers = 3 [json_name = "dnsServers"];

  // Timeout for DNS queries in milliseconds (default 5000)
  optional int32 timeout_ms = 4 [json_name = "timeoutMs"];

  // Whether to use system DNS as fallback
  optional bool use_system_dns_fallback = 5 [json_name = "useSystemDnsFallback"];

  // Whether reverse DNS lookup is enabled
  optional bool reverse_dns_enabled = 6 [json_name = "reverseDnsEnabled"];

  // Creation timestamp
  optional google.protobuf.Timestamp created_at = 10 [json_name = "createdAt"];

  // Last update timestamp
  optional google.protobuf.Timestamp updated_at = 11 [json_name = "updatedAt"];
}

// GetDnsConfigRequest retrieves DNS configuration for a tenant
message GetDnsConfigRequest {
  optional uint32 tenant_id = 1 [
    json_name = "tenantId",
    (google.api.field_behavior) = REQUIRED
  ];
}

message GetDnsConfigResponse {
  DnsConfig config = 1 [json_name = "config"];
}

// UpdateDnsConfigRequest updates DNS configuration
message UpdateDnsConfigRequest {
  optional uint32 tenant_id = 1 [
    json_name = "tenantId",
    (google.api.field_behavior) = REQUIRED
  ];

  // DNS server addresses
  repeated string dns_servers = 2 [json_name = "dnsServers"];

  // Timeout for DNS queries in milliseconds
  optional int32 timeout_ms = 3 [json_name = "timeoutMs"];

  // Whether to use system DNS as fallback
  optional bool use_system_dns_fallback = 4 [json_name = "useSystemDnsFallback"];

  // Whether reverse DNS lookup is enabled
  optional bool reverse_dns_enabled = 5 [json_name = "reverseDnsEnabled"];
}

message UpdateDnsConfigResponse {
  DnsConfig config = 1 [json_name = "config"];
}

// TestDnsConfigRequest tests DNS configuration by performing a sample lookup
message TestDnsConfigRequest {
  optional uint32 tenant_id = 1 [json_name = "tenantId"];

  // Test IP address to perform reverse DNS lookup
  string test_ip = 2 [
    json_name = "testIp",
    (buf.validate.field).string.min_len = 1,
    (google.api.field_behavior) = REQUIRED
  ];

  // Optional: override DNS servers for this test
  repeated string dns_servers = 3 [json_name = "dnsServers"];
}

message TestDnsConfigResponse {
  bool success = 1 [json_name = "success"];
  optional string hostname = 2 [json_name = "hostname"];
  optional string error_message = 3 [json_name = "errorMessage"];
  optional int32 latency_ms = 4 [json_name = "latencyMs"];
}

// SystemService provides system-level operations
service SystemService {
  // Health check
  rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse) {
    option (google.api.http) = {
      get: "/v1/health"
    };
  }

  // Get overall IPAM statistics
  rpc GetStats(GetStatsRequest) returns (GetStatsResponse) {
    option (google.api.http) = {
      get: "/v1/stats"
    };
  }

  // Get DNS configuration for reverse DNS lookups
  rpc GetDnsConfig(GetDnsConfigRequest) returns (GetDnsConfigResponse) {
    option (google.api.http) = {
      get: "/v1/dns-config"
    };
  }

  // Update DNS configuration
  rpc UpdateDnsConfig(UpdateDnsConfigRequest) returns (UpdateDnsConfigResponse) {
    option (google.api.http) = {
      put: "/v1/dns-config"
      body: "*"
    };
  }

  // Test DNS configuration
  rpc TestDnsConfig(TestDnsConfigRequest) returns (TestDnsConfigResponse) {
    option (google.api.http) = {
      post: "/v1/dns-config/test"
      body: "*"
    };
  }
}
